syntax = "proto3";

package proto;
option go_package = "./pb";

service CliService {
    rpc Register (RegisterRequest) returns (RegisterResponse) {}
    rpc RegisterWorkspace (RegisterWorkspaceRequest) returns (RegisterWorkspaceResponse) {}
    rpc RegisterUserToWorkspace (RegisterUserToWorkspaceRequest) returns (RegisterUserToWorkspaceResponse) {}
    rpc RequestPunchFromReceiver (RequestPunchFromReceiverRequest) returns (RequestPunchFromReceiverResponse) {}
    rpc NotifyNewPushToListeners (NotifyNewPushToListenersRequest) returns (NotifyNewPushToListenersResponse) {}
    rpc GetAllWorkspaces (GetAllWorkspacesRequest) returns (GetAllWorkspacesResponse) {}
    rpc GetLastPushNumOfWorkspace (GetLastPushNumOfWorkspaceRequest) returns (GetLastPushNumOfWorkspaceResponse) {}
}

message RegisterRequest {
    string username = 1;
    string password = 2;
}

message RegisterResponse {
    int32 ws_port = 1;
}

message RegisterWorkspaceRequest {
    string username = 1;
    string password = 2;
    string workspace_name = 3;
}

message RegisterWorkspaceResponse {}

message RegisterUserToWorkspaceRequest {
    string listener_username = 1;
    string listener_password = 2;
    string workspace_name = 3;
    string workspace_owner_username = 4;
}

message RegisterUserToWorkspaceResponse {}

message RequestPunchFromReceiverRequest {
    string listener_username = 1;
    string listener_password = 2;
    string listener_public_ip = 3;
    string listener_public_port= 4;
    string listener_private_ip = 5;
    string listener_private_port = 6;
    string workspace_owner_username = 7;
    string workspace_name = 8;
}

message RequestPunchFromReceiverResponse {
    string workspace_owner_public_ip = 1;
    string workspace_owner_public_port = 2;
    string workspace_owner_private_ip = 3;
    string workspace_owner_private_port = 4;
}

message NotifyNewPushToListenersRequest {
    string workspace_owner_username = 1;
    string workspace_owner_password = 2;
    string workspace_name = 3;
    int32 new_workspace_push_num = 4;
}

message NotifyNewPushToListenersResponse {}

message GetAllWorkspacesRequest {
    string username = 1;
    string password = 2;
}

message WorkspaceInfo {
    string workspace_owner = 1;
    string workspace_name = 2;
}

message GetAllWorkspacesResponse {
    repeated WorkspaceInfo workspaces = 1;    
}

message GetLastPushNumOfWorkspaceRequest {
    string workspace_owner = 1;
    string workspace_name = 2;
    string listener_username = 3;
    string listener_password = 4;
}

message GetLastPushNumOfWorkspaceResponse {
    int32 last_push_num = 1;
}
